# linkclub

./: .gitignore  Cargo.toml  flake.nix
app/: Cargo.toml  Trunk.toml  index.html
app/src/: lib.rs  main.rs
migrations/: 20211117233543_init.sql
src/: lib.rs  main.rs  telemetry.rs
src/middleware/: mod.rs  static_app.rs
src/routes/: add_user.rs  mod.rs  static_app.rs
src/routes/extractors/: mod.rs  static_file.rs
tests/: add_user.rs  health_check.rs
tests/helper/: mod.rs
