[package]
name = "app"
version = "0.1.0"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "linkclub-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
reqwasm = "0.2.1"
serde = { version = "1.0.130", features = ["derive"] }
sycamore = { version = "0.7.1", features = ["experimental-hydrate", "futures"] }
sycamore-router = "0.7.1"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["HtmlInputElement", "InputEvent"] }
